2009-12-02  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        build-queue is throwing exceptions and complaining about
        lack of --no-update on build-attachment.  Make it stop.

        * Scripts/modules/buildsteps.py:
        * Scripts/modules/commands/download.py:

2009-12-02  Adam Barth  <abarth@webkit.org>

        Unreviewed "build" fix.  Forgot to declare my variables.  :(

        * QueueStatusServer/queue_status.py:

2009-12-02  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        [bzt] Implement status bubble view
        https://bugs.webkit.org/show_bug.cgi?id=32057

        The status bubble is a compact representation of the queue status for a
        given patch.  This will eventually help us reduce the comment spam from
        the queues.

        * QueueStatusServer/index.html: Added HTML5 doctype for sanity.
        * QueueStatusServer/queue_status.py:
        * QueueStatusServer/status_bubble.html: Added.

2009-12-02  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        trim commands/*.py includes now that commands are unit tested
        https://bugs.webkit.org/show_bug.cgi?id=32056

        In the course of ensuring that the unit tests still
        passed after this change, I had to actually make them
        pass in the first place.

        * Scripts/modules/bugzilla.py:
         - Fix _parse_attachment_ids_request_query to return ints instead of strings.
        * Scripts/modules/commands/download.py: Remove unneeded imports.
        * Scripts/modules/commands/queries.py: Ditto.
        * Scripts/modules/commands/queues.py: Ditto.
        * Scripts/modules/commands/upload.py: Ditto.
        * Scripts/modules/scm_unittest.py:
         - Fix to expect the \n after the path since echo adds an \n.

2009-12-01  Yaar Schnitman  <yaar@chromium.org>

        build-webkit: Remove flex,bison,gperf check for chromium
        https://bugs.webkit.org/show_bug.cgi?id=32043
